[package]
name = "cvrf-xmlparser"
version = "0.1.0"
edition = "2021"
authors = ["Jia Chao <jiachao2130@126.com"]
license = "MIT"
keywords = ["cve", "xml"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "An xml parser for openEuler cvrf."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
tracing = { version = "0.1" }
xml-rs = { version = "0.8" }
